# ABMS

./: .gitignore  README.md  pyproject.toml  pyproject.toml.py  readme.md  requirements.txt
Testing/: Autobiography of Andrew Carnegie.docx  First-Person Fictional Narrative.docx  Instructional Technical Guide.docx  Persuasive and Controversial News Article.docx  Satirical Opinion Piece.docx  Scientific Research Summary.docx  algorithm.docx
abms_validation/: aspect_based_metadata_decoder.py  aspect_based_metadata_generator.py  batch_process_abms.py  evaluate_abms.py  evaluation_results.pkl  figure_creation_script.py  genre_analysis.py  ground_truth_imdb.pkl  ground_truth_newsgroups.pkl  readability_analysis.py  test_abms.py
abms_validation/analysis_modules/: humor_analysis.py
abms_validation/datasets/: batch_process_abms.py  extract_ground_truth.py
abms_validation/datasets/20 Newsgroups Dataset/: download_datasets.py
abms_validation/datasets/IMDB Movie Reviews/: download_imdb.py
abms_validation/ground_truth/: ground_truth_imdb.pkl  ground_truth_newsgroups.pkl
abms_validation/results_all/: abms.parquet  baseline.parquet  quick_metrics.json
abms_validation/results_fast/: abms.parquet
abms_validation/results_vader/: abms_results_imdb.pkl  abms_results_newsgroups.pkl  quick_metrics.json
publisher/: aspect_based_metadata_generator.py  publisher_app.py
publisher/Results/: analysis_report.docx
publisher/analysis_modules/: humor_analysis.py
reader/: aspect_based_metadata_decoder.py  result_presenter.py
reader/Results/: analysis_report.docx
src/abms/publisher/analysis_modules/: interactivity_analysis.py  reliability_analysis.py
src/abms/reader/: reader_app.py
src/abms/reader/Results/ABMS_paper/: abms_aspects.json  analysis_report.docx
